--- a/osm/pom.xml
+++ b/osm/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>osm</artifactId>
     <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-RC1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
