--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <buildNumber>${maven.build.timestamp}</buildNumber>
         <site.basedir>${project.basedir}</site.basedir>
+        <log4j-version>2.14.0</log4j-version>
     </properties>
 
     <licenses>
@@ -94,6 +95,21 @@
                 <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
                 <artifactId>geoclimate</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j-impl</artifactId>
+                <version>${log4j-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
