--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -99,6 +99,10 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-json</artifactId>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
