--- a/bdtopo_v2/pom.xml
+++ b/bdtopo_v2/pom.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.orbisgis.orbisprocess</groupId>
+        <groupId>org.orbisgis.geoclimate</groupId>
         <artifactId>geoclimate-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -16,7 +16,7 @@
         <site.basedir>${project.parent.basedir}</site.basedir>
     </properties>
 
-    <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
+    <groupId>org.orbisgis.geoclimate</groupId>
     <artifactId>bdtopo_v2</artifactId>
     <dependencies>
         <dependency>
@@ -50,14 +50,16 @@
         <dependency>
             <groupId>org.orbisgis.orbisdata.datamanager</groupId>
             <artifactId>dataframe</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-simple</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
+            <groupId>org.orbisgis.geoclimate</groupId>
             <artifactId>geoindicators</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.orbisgis.orbisprocess.geoclimate</groupId>
-            <artifactId>processingchain</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
