--- a/.github/workflows/CI snapshot.yml
+++ b/.github/workflows/CI snapshot.yml
@@ -64,7 +64,6 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: dist-without-markdown
+          name: jar with dependencies
           path: |
-            geoclimate/target/geoclimate-*.*.*-SNAPSHOT-with-dependencies.jar
             geoclimate/target/geoclimate-*.*.*-SNAPSHOT.jar
