--- a/.github/workflows/CI_snapshot.yml
+++ b/.github/workflows/CI_snapshot.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           distribution: adopt
           java-version: 11
+          cache: 'maven'
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
@@ -62,7 +63,7 @@ jobs:
 
       # Export the last git tag into env.
       - name: Export env values
-        run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version)" >> $GITHUB_ENV
+        run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
 
       # Upload the jar with dependencies
       - name: Archive production artifacts
