--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.orbisgis</groupId>
+                <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
             </dependency>
             <dependency>
