--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,6 @@
         <!-- Plugins versions -->
         <exec-maven-version>3.0.0</exec-maven-version>
         <gmaven-version>3.0.2</gmaven-version>
-        <jacoco-maven-version>0.8.7</jacoco-maven-version>
         <maven-archetype-plugin-version>3.2.0</maven-archetype-plugin-version>
         <maven-assembly-version>3.3.0</maven-assembly-version>
         <maven-bundle-version>5.1.2</maven-bundle-version>
@@ -71,12 +70,9 @@
         <maven-install-version>3.0.0-M1</maven-install-version>
         <maven-jar-version>3.2.0</maven-jar-version>
         <maven-javadoc-version>3.3.1</maven-javadoc-version>
-        <maven-project-info-reports-version>3.1.2</maven-project-info-reports-version>
         <maven-release-version>3.0.0-M4</maven-release-version>
-        <maven-resources-version>3.2.0</maven-resources-version>
-        <maven-site-version>3.9.1</maven-site-version>
+        <maven-source-version>3.2.1</maven-source-version>
         <maven-surefire-version>3.0.0-M5</maven-surefire-version>
-        <maven-surefire-report-plugin-version>3.0.0-M5</maven-surefire-report-plugin-version>
         <version-maven-version>2.8.1</version-maven-version>
 
         <!-- Extensions version -->
@@ -87,6 +83,7 @@
         <license>
             <name>GNU Lesser General Public License (LGPLV3+)</name>
             <url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
 
@@ -402,12 +399,6 @@
                         </rulesUri>
                     </configuration>
                 </plugin>
-                <!-- Reporting -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-project-info-reports-plugin</artifactId>
-                    <version>${maven-project-info-reports-version}</version>
-                </plugin>
                 <!-- Javadoc generation -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -496,18 +487,6 @@
                         </execution>
                     </executions>
                 </plugin>
-                <!-- Resources -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>${maven-resources-version}</version>
-                </plugin>
-                <!-- Site -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <version>${maven-site-version}</version>
-                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -540,7 +519,6 @@
                 </executions>
                 <inherited>false</inherited>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
@@ -550,38 +528,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>deploy</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>${maven-gpg-plugin-version}</version>
-                        <configuration>
-                            <gpgArguments>
-                                <arg>--pinentry-mode</arg>
-                                <arg>loopback</arg>
-                            </gpgArguments>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
     <!-- Environment Settings -->
     <repositories>
