--- a/osm/pom.xml
+++ b/osm/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <artifactId>geoclimate-parent</artifactId>
         <groupId>org.orbisgis.geoclimate</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>osm</artifactId>
     <groupId>org.orbisgis.geoclimate</groupId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <!-- Project Information -->
     <name>osm</name>
